[tool.poetry]
name = "krpy"
version = "0.1.0"
description = "Relative Permeabilities Utility Tool"
authors = ["Santiago Cuervo <scuervo91@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = "^1.21.4"
pandas = "^1.3.4"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
scipy = "^1.7.2"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
notebook = "^6.4.5"
mkdocs-material = "^7.3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
